git-annex (10.20251216) UNRELEASED; urgency=medium

  * fix: Populate unlocked pointer files in situations where a git command,
    like git reset or git stash, leaves them unpopulated.
  * When displaying sqlite error messages, include the path to the database.
  * Remove support for building with old versions of persistent-sqlite.

 -- Joey Hess <id@joeyh.name>  Thu, 01 Jan 2026 12:20:29 -0400

git-annex (10.20251215) upstream; urgency=medium

  * Added annex.trashbin configuration.
  * Added --presentsince, --lackingsince, and --changedsince file
    matching options.
  * Added TRANSFER-RETRIEVE-URL extension to the external special remote
    protocol.
  * S3: Remote can be configured with an x-amz-tagging header.
    (Needs aws-0.25)
  * S3: Support Google Cloud Storage
    (Needs aws-0.25.1)
  * S3: Support restore=yes, when used with storageclass=DEEP_ARCHIVE and
    similar. This is equivilant to the now deprecated Amazon Glacier.
    (Needs aws-0.25.2)
  * Add a build warning when the version of aws being built against is
    too old to support all features.
  * stack.yaml: Use aws-0.25.2.

 -- Joey Hess <id@joeyh.name>  Mon, 15 Dec 2025 13:23:29 -0400

git-annex (10.20251114) upstream; urgency=medium

  * p2p --pair: Fix to work with external P2P networks.
  * p2phttp: Significant robustness fixes for bugs that caused the 
    server to stall.
  * p2phttp: Fix a file descriptor leak.
  * p2phttp: Added the --lockedfiles option.
  * dropunused: Run the annex.secure-erase-command 
    (or .git/hooks/secure-erase-annex) when deleting
    temp and bad object files.
  * remotedaemon: Avoid crashing when run with --debug.

 -- Joey Hess <id@joeyh.name>  Fri, 14 Nov 2025 12:46:45 -0400

git-annex (10.20251029) upstream; urgency=medium

  * Support ssh remotes with '#' and '?' in the path to the repository,
    the same way git does.
  * assistant: Fix reversion that caused files to be added locked by
    default.
