@@ -46,7 +46,6 @@ module Database.Export (
 import Database.Types
 import qualified Database.Queue as H
 import Database.Init
-import Database.Utility
 import Annex.Locations
 import Annex.Common hiding (delete)
 import Types.Export
@@ -120,7 +119,7 @@ flushDbQueue (ExportHandle h _) = H.flushDbQueue h
 recordExportTreeCurrent :: ExportHandle -> Sha -> IO ()
 recordExportTreeCurrent h s = queueDb h $ do
 	deleteWhere ([] :: [Filter ExportTreeCurrent])
-	void $ insertUniqueFast $ ExportTreeCurrent $ toSSha s
+	void $ insertUnique_ $ ExportTreeCurrent $ toSSha s
 
 getExportTreeCurrent :: ExportHandle -> IO (Maybe Sha)
 getExportTreeCurrent (ExportHandle h _) = H.queryDbQueue h $ do
@@ -132,7 +131,7 @@ getExportTreeCurrent (ExportHandle h _) = H.queryDbQueue h $ do
 
 addExportedLocation :: ExportHandle -> Key -> ExportLocation -> IO ()
 addExportedLocation h k el = queueDb h $ do
-	void $ insertUniqueFast $ Exported k ef
+	void $ insertUnique_ $ Exported k ef
 	let edirs = map
 		(\ed -> ExportedDirectory (SByteString (fromOsPath (fromExportDirectory ed))) ef)
 		(exportDirectories el)
@@ -183,7 +182,7 @@ getExportTreeKey (ExportHandle h _) el = H.queryDbQueue h $ do
 
 addExportTree :: ExportHandle -> Key -> ExportLocation -> IO ()
 addExportTree h k loc = queueDb h $
-	void $ insertUniqueFast $ ExportTree k ef
+	void $ insertUnique_ $ ExportTree k ef
   where
 	ef = SByteString (fromOsPath (fromExportLocation loc))
 
